kotlin library add

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,5 +32,6 @@ androidx-navigation-compose = {group = "androidx.navigation", name="navigation-c
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
