--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,9 @@ coroutineCore = "1.8.1"
 room = "2.6.1"
 composeFoundation = "1.8.3"
 coil = "2.4.0"
+hiltNavigationCompose = "1.1.0"
+lifecycleViewModelCompose = "2.7.0"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -69,6 +72,8 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 
 compose-foundation = {group = "androidx.compose.foundation", name = "foundation", version.ref = "composeFoundation"}
 coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewModelCompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -77,6 +82,7 @@ jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
+
 
 [bundles]
 retrofit = ["retrofit-core", "retrofit-moshi"]
